--- a/Assets/_Project/Scripts/Debug/Debug.asmdef
+++ b/Assets/_Project/Scripts/Debug/Debug.asmdef
@@ -6,7 +6,8 @@
         "GUID:ad968d605628d06499b62cdc30f11cf8",
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
         "GUID:24461fb9188b28e49bf72d3c199cb21d",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:d1b9bb5a4a49e1a4c931fb112b03d179"
     ],
     "includePlatforms": [
         "Android",
